--- a/lista_tareas.html
+++ b/lista_tareas.html
@@ -16,26 +16,53 @@
 
   <body>
     <div class="row justify-content-center mt-5">
-      <div class="col-12 text-center mb-3">
-        <h5 class="subtitulos">Lista de tareas</h5>
-        <h5 class="subtitulos-mini">¿Cuándo y dónde?</h5>
-        <h5 class="texto">Sábado 13 de julio de 2024</h5>
-      </div>
-      <div class="col-lg-6 col-12 row justify-content-center">
+      <div class="col-12 row justify-content-center">
         <div class="card width-card pb-3 my-1">
           <div class="card-body">
-            <h5 class="card-title text-center texto-card">Ceremonio religiosa</h5>
-            <h6 class="card-subtitle mb-2 text-center subtext">Rectoría de Santiago Apóstol Iztacalco, CDMX</h6>
-            <p class="card-text text-center subtext"><i class="fa fa-trash fa-2x" aria-hidden="true"></i> 5:45 pm</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.5158015454404!2d-99.12686892542757!3d19.39010744203782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fef4dab98295%3A0x87ed4360174449fb!2sRector%C3%ADa%20de%20Santiago%20Ap%C3%B3stol%20Iztacalco!5e0!3m2!1ses-419!2smx!4v1714928139642!5m2!1ses-419!2smx" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-           <div class="row justify-content-center mt-3">
-              <button id="ceremonia" type="button" class="btn btn-color"><a href="https://maps.app.goo.gl/bc7K6tkPqb6zF86t7" class="card-link"></a> Ver en Google Maps</button>
-            </div>
+            <h5 class="card-title text-center texto-card">Agregar tarea</h5>
+            <form action="POST" id="add_tarea">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <label class="form-control-label">Tarea: <span class="tx-danger">*</span></label>
+                    <input maxlength="60" autocomplete="off" class="form-control" type="text" id="tarea" name="tarea" required>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <label class="form-control-label">Prioridad: <span class="tx-danger">*</span></label>
+                    <select class="form-control" name="prioridad" id="prioridad">
+                      <option value="">Selecciona una opcion</option>
+                      <option value="1"> Alta</option>
+                      <option value="2"> Media</option>
+                      <option value="3"> Baja</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label">Descripción: <span class="tx-danger">*</span></label>
+                    <textarea maxlength="2000" autocomplete="off" rows="2" class="form-control" id="descripcion" name="descripcion" required></textarea>
+                  </div>
+                </div>
+
+              </div>
+              <div class="row justify-content-center mt-3">
+                <button type="submit" class="btn btn-color"><i class="fa fa-plus" aria-hidden="true"></i> Agregar</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
+
+      <div class="col-12 text-center mb-3 mt-4">
+        <h5 class="subtitulos">Lista de tareas</h5>
+      </div>
+
+      <div id="lista_tareas" class="row justify-content-center"></div>
     </div>
   </body>
+
   <div class="row justify-content-center text-center footer">
     <p> Desarrollado por Airam V. Vargas</p>
   </div>
