--- a/lista_tareas.html
+++ b/lista_tareas.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="estilos.css">
     <link href="css/bootstrap.css" rel="stylesheet">
     <script src="js/bootstrap.min.js"></script>
-    <script src="lista_tareas.js"></script>
   </head>
 
   <body>
@@ -19,7 +18,7 @@
       <div class="col-12 row justify-content-center">
         <div class="card width-card pb-3 my-1">
           <div class="card-body">
-            <h5 class="card-title text-center texto-card">Agregar tarea</h5>
+            <h5 class="card-title text-center tit-card">Agregar tarea</h5>
             <form action="POST" id="add_tarea">
               <div class="row">
                 <div class="col-lg-6">
@@ -58,10 +57,21 @@
       <div class="col-12 text-center mb-3 mt-4">
         <h5 class="subtitulos">Lista de tareas</h5>
       </div>
+      <div class="row col-8 justify-content-center">
+        <div class="col-6 text-center mb-3 mt-4">
+          <h5 id="t_pend" class="sub-text">Pendientes: </h5>
+        </div>
+        <div class="col-6 text-center mb-3 mt-4">
+          <h5 id="t_realiz" class="sub-text">Realizadas: </h5>
+        </div>
+      </div>
+      
 
       <div id="lista_tareas" class="row justify-content-center"></div>
     </div>
   </body>
+
+  <script src="lista_tareas.js"></script>
 
   <div class="row justify-content-center text-center footer">
     <p> Desarrollado por Airam V. Vargas</p>
