--- a/lista_tareas.html
+++ b/lista_tareas.html
@@ -46,7 +46,7 @@
                 </div>
 
               </div>
-              <div class="row justify-content-center mt-3">
+              <div class="row col-12 justify-content-center mt-3">
                 <button type="submit" class="btn btn-color"><i class="fa fa-plus" aria-hidden="true"></i> Agregar</button>
               </div>
             </form>
@@ -57,7 +57,7 @@
       <div class="col-12 text-center mb-3 mt-4">
         <h5 class="subtitulos">Lista de tareas</h5>
       </div>
-      <div class="row col-8 justify-content-center">
+      <div class="row col-12 justify-content-center">
         <div class="col-6 text-center mb-3 mt-4">
           <h5 id="t_pend" class="sub-text">Pendientes: </h5>
         </div>
