--- a/lista_tareas.html
+++ b/lista_tareas.html
@@ -15,7 +15,7 @@
 
   <body>
     <div class="row justify-content-center mt-5">
-      <div class="col-12 row justify-content-center">
+      <div class="col-6 row justify-content-center">
         <div class="card width-card pb-3 my-1">
           <div class="card-body">
             <h5 class="card-title text-center tit-card">Agregar tarea</h5>
@@ -47,7 +47,47 @@
 
               </div>
               <div class="row col-12 justify-content-center mt-3">
-                <button type="submit" class="btn btn-color"><i class="fa fa-plus" aria-hidden="true"></i> Agregar</button>
+                <button type="submit" class="btn btn-agregar"><i class="fa fa-plus" aria-hidden="true"></i> Agregar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 row justify-content-center">
+        <div class="card width-card pb-3 my-1">
+          <div class="card-body">
+            <h5 class="card-title text-center tit-card">Editar tarea</h5>
+            <form action="POST" id="upd_tarea">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <label class="form-control-label">Tarea: <span class="tx-danger">*</span></label>
+                    <input maxlength="60" autocomplete="off" class="form-control" type="text" id="upd_tarea" name="tarea" required>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <label class="form-control-label">Prioridad: <span class="tx-danger">*</span></label>
+                    <select class="form-control" name="prioridad" id="upd_prioridad">
+                      <option value="">Selecciona una opcion</option>
+                      <option value="1"> Alta</option>
+                      <option value="2"> Media</option>
+                      <option value="3"> Baja</option>
+                    </select>
+                    <input type="hidden" id="id_upd">
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label">Descripción: <span class="tx-danger">*</span></label>
+                    <textarea maxlength="2000" autocomplete="off" rows="2" class="form-control" id="upd_descripcion" name="descripcion" required></textarea>
+                  </div>
+                </div>
+
+              </div>
+              <div class="row col-12 justify-content-center mt-3">
+                <button type="submit" class="btn btn-color"><i class="fa fa-plus" aria-hidden="true"></i> Actualizar</button>
               </div>
             </form>
           </div>
