--- a/lista_tareas.html
+++ b/lista_tareas.html
@@ -58,7 +58,7 @@
         <div class="card width-card pb-3 my-1">
           <div class="card-body">
             <h5 class="card-title text-center tit-card">Editar tarea</h5>
-            <form action="POST" id="upd_tarea">
+            <form action="POST" id="update_tarea">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
